  im_tbjoin(), im_extract_area(), im_extract_bands(), im_extract_areabands(),
  im_replicate(), im_clip2fmt(), im_gbandjoin(), im_bandjoin(), im_invert(),
  im_lintra(), im_lintra_vec(), im_black(), im_rot90, im_rot180(), im_rot270()
  im_sintra(), im_costra(), im_tantra(), im_asintra(), im_acostra(), 
  im_atantra(), im_exptra(), im_exp10tra(), im_logtra(), im_log10tra(),
  im_abs(), im_sign(), im_max(), im_maxpos(), im_deviate(), im_divide()
  redone as classes
- added argument priorites to help control arg ordering
- generate has a 'stop' param to signal successful early termination
- added optional output args, eg. x/y for min
- CLI supports optional output args
- in im_vips2tiff, enable YCbCr compression for jpeg write
- VipsMin stops search early if it can
- C API supports optional output args
- switch back to int-valued operations
- add the operation cache
- fallback vips_init()
- vips_tracked_malloc() tracks allocation size and can report total mem usage
- cache limits, drop, init, flush plus command-line controls
- remove dmalloc support, was never used and valgrind is better
- im_csv2vips() allows quoted strings, including escaped quotes
- added vips_shutdown()
- added --vips-leak flag
- more VipsImage props
- added vips_image_write(), old one becomes vips_image_write_to_file()
- added vips_region_paint_pel()
- added VipsArea as a public struct
- added array members and arguments
- added nary
- remove VipsPool, vips_object_local_array() is much better
- cache.c now drops if you have too many open files
- CLI args to change max files
- new format for handling exif tags 
- switch SMALLTILE to 128, 512 was just too big
- oop mode "rd" was not always being used for images

12/10/11 started 7.26.6
- NOCACHE was not being set correctly on OS X causing performance 
  problems with large files
- update Orientation exif tag on jpeg write

12/10/11 started 7.26.5
- jpeg read/write copies over XMP data