@@ -503,6 +503,7 @@ vips_arithmetic_operation_init( void )
 {
 	extern GType vips_add_get_type( void ); 
 	extern GType vips_subtract_get_type( void ); 
+	extern GType vips_multiply_get_type( void ); 
 	extern GType vips_divide_get_type( void ); 
 	extern GType vips_invert_get_type( void ); 
 	extern GType vips_avg_get_type( void ); 
@@ -516,6 +517,7 @@ vips_arithmetic_operation_init( void )
 
 	vips_add_get_type();
 	vips_subtract_get_type();
+	vips_multiply_get_type();
 	vips_divide_get_type();
 	vips_invert_get_type();
 	vips_avg_get_type();
